New feature branch! news-and-resources so you can see what I'm working on, copy into your local files etc. First commit. Rough draft of news and local testing resources. See comments in files.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,17 @@
     border-radius: 20px;
 }
 
+/* News  & Testing Section */ 
+#news-list li, #test-list li {
+    list-style: none;
+    padding-bottom: 10px;
+}
+
+#news-list a {
+    color: #333 ;
+    font-weight: 500;
+}
+
 /* Cards */ 
 /* trim them up */ 
 .all-cards {
