--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,14 +47,13 @@
     font-weight: 500;
 }
 
-/* Show More button, Testing Section */ 
-#show-more {
+/* Show More Buttons */ 
+#more-tests, #more-news {
     margin-left: 40px;
 }
 
-/* Show More Button*/ 
 /* .hide & button text toggled dynamically in js */ 
 .hide {
-    height: 250px;
+    height: 255px;
     overflow: hidden;
 }
