Fixed a class for my CSS.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ body {
 /* David's CSS */ 
 
 /* Stats Cards, dynamic fill - New  */ 
-.global, .state {
+.squeeze {
     max-width: 90%;
     margin: 0 auto;
 }
